[package]
name = "mechanics"
version = "0.2.0"
edition = "2024"

authors = ["metastable-void"]
description = "mechanics automation framework (http server)"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-rs"
homepage = "https://github.com/metastable-void/mechanics-rs"
keywords = ["automation", "orchestration", "javascript", "worker-pool", "boa"]
categories = ["concurrency", "artificial-intelligence", "api-bindings"]

[dependencies]
mechanics-core = "0.2.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.149"
parking_lot = "0.12.5"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
