[package]
name = "mechanics"
version = "0.5.2"
edition = "2024"
rust-version = "1.88"

authors = ["metastable-void"]
description = "mechanics automation framework (http server)"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-rs"
homepage = "https://github.com/metastable-void/mechanics-rs"
keywords = ["automation", "orchestration", "javascript", "worker-pool", "boa"]
categories = ["concurrency", "artificial-intelligence", "api-bindings"]

[features]
default = []
https = ["dep:mechanics-http-server", "dep:tokio-rustls"]

[dependencies]
mechanics-core = "0.5"
hyper = { version = "1", default-features = false, features = ["http1", "http2", "server"] }
tokio = { version = "1", default-features = false, features = ["net", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = { version = "0.1", default-features = false, features = [] }
hyper-util = { version = "0.1", default-features = false, features = ["http1", "http2", "server", "tokio"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.5", default-features = false, features = [] }

mechanics-http-server = { version = "0.1", default-features = false, optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "logging", "tls12"], optional = true } # kept: trim pulls ring via rustls provider default

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
